Add radar example to reality tabs examples list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -34,12 +34,16 @@ const links = [
     url: 'sword_ml.html',
   },
   {
-    name: 'Image tracking',
-    url: 'imagetracking_ml.html',
+    name: 'Sword',
+    url: 'sword_ml.html',
   },
   {
-    name: 'Pathfinding',
-    url: 'pathfinding_ml.html',
+    name: 'Radar',
+    url: 'radar_ml.html',
+  },
+  {
+    name: 'Image tracking',
+    url: 'imagetracking_ml.html',
   },
   {
     name: 'Microphone',
