Add planes example to reality tabs links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -18,6 +18,10 @@ const links = [
     url: 'meshing_ml.html',
   },
   {
+    name: 'Planes',
+    url: 'planes_ml.html',
+  },
+  {
     name: 'Minimap',
     url: 'minimap_ml.html',
   },
